--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
     
 </head>
 <body>
-    
+    <div class="container">
+        <div class="screen">55318008</div>
+        <div class="buttons-grid">
+            <button class="clear">C</button>
+            <button class="add">+</button>
+            <button class="subtract">-</button>
+            <button class="multiply">*</button>
+            <button class="divide">/</button>
+            <button class="one">1</button>
+            <button class="two">2</button>
+            <button class="three">3</button>
+            <button class="four">4</button>
+            <button class="five">5</button>
+            <button class="six">6</button>
+            <button class="seven">7</button>
+            <button class="eight">8</button>
+            <button class="nine">9</button>
+            <button class="zero">0</button>
+        </div>
+    </div>
 </body>
 </html>
