--- a/index.html
+++ b/index.html
@@ -13,23 +13,36 @@
 </head>
 <body>
     <div class="container">
-        <div class="screen">55318008</div>
+        <div class="screen">5318008</div>
         <div class="buttons-grid">
-            <button class="clear">C</button>
-            <button class="add">+</button>
-            <button class="subtract">-</button>
-            <button class="multiply">*</button>
-            <button class="divide">/</button>
-            <button class="one">1</button>
-            <button class="two">2</button>
-            <button class="three">3</button>
-            <button class="four">4</button>
-            <button class="five">5</button>
-            <button class="six">6</button>
-            <button class="seven">7</button>
-            <button class="eight">8</button>
-            <button class="nine">9</button>
-            <button class="zero">0</button>
+            <div class="row row-1">
+                <button class="clear">CLEAR</button>
+                <button class="delete">🔙</button>
+            </div>
+            <div class="row row-2">
+                <button class="seven">7</button>
+                <button class="eight">8</button>
+                <button class="nine">9</button>
+                <button class="divide">➗</button>
+            </div>
+            <div class="row row-3">
+                <button class="four">4</button>
+                <button class="five">5</button>
+                <button class="six">6</button>
+                <button class="multiply">✖️</button>
+            </div>
+            <div class="row row-4">
+                <button class="one">1</button>
+                <button class="two">2</button>
+                <button class="three">3</button>
+                <button class="subtract">➖</button>
+            </div>
+            <div class="row row-5">
+                <button class="decimal">.</button>
+                <button class="zero">0</button>
+                <button class="equal">=</button>
+                <button class="add">➕</button>
+            </div>
         </div>
     </div>
 </body>
