Add button animations and screen functionality

--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     
 </head>
 <body>
     <div class="container">
-        <div class="screen">5318008</div>
+        <div class="screen"></div>
         <div class="buttons-grid">
             <div class="row row-1">
                 <button class="clear">CLEAR</button>
                 <button class="delete">🔙</button>
             </div>
             <div class="row row-2">
-                <button class="seven">7</button>
-                <button class="eight">8</button>
-                <button class="nine">9</button>
+                <button class="digit seven">7</button>
+                <button class="digit eight">8</button>
+                <button class="digit nine">9</button>
                 <button class="divide">➗</button>
             </div>
             <div class="row row-3">
-                <button class="four">4</button>
-                <button class="five">5</button>
-                <button class="six">6</button>
+                <button class="digit four">4</button>
+                <button class="digit five">5</button>
+                <button class="digit six">6</button>
                 <button class="multiply">✖️</button>
             </div>
             <div class="row row-4">
-                <button class="one">1</button>
-                <button class="two">2</button>
-                <button class="three">3</button>
+                <button class="digit one">1</button>
+                <button class="digit two">2</button>
+                <button class="digit three">3</button>
                 <button class="subtract">➖</button>
             </div>
             <div class="row row-5">
-                <button class="decimal">.</button>
-                <button class="zero">0</button>
+                <button class="digit decimal">.</button>
+                <button class="digit zero">0</button>
                 <button class="equal">=</button>
                 <button class="add">➕</button>
             </div>
