--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
                 <button class="digit seven">7</button>
                 <button class="digit eight">8</button>
                 <button class="digit nine">9</button>
-                <button class="divide">➗</button>
+                <button class="operator divide">➗</button>
             </div>
             <div class="row row-3">
                 <button class="digit four">4</button>
                 <button class="digit five">5</button>
                 <button class="digit six">6</button>
-                <button class="multiply">✖️</button>
+                <button class="operator multiply">✖️</button>
             </div>
             <div class="row row-4">
                 <button class="digit one">1</button>
                 <button class="digit two">2</button>
                 <button class="digit three">3</button>
-                <button class="subtract">➖</button>
+                <button class="operator subtract">➖</button>
             </div>
             <div class="row row-5">
                 <button class="digit decimal">.</button>
                 <button class="digit zero">0</button>
                 <button class="equal">=</button>
-                <button class="add">➕</button>
+                <button class="operator add">➕</button>
             </div>
         </div>
     </div>
